reference/5.1/Microsoft.PowerShell.Utility/Export-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/export-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Export-Csv
ms.openlocfilehash: 5a76f8ec454ad8144f193d8927f913b89a429fec
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93203306"
---
# <span data-ttu-id="849fa-103">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="849fa-103">Export-Csv</span></span>

## <span data-ttu-id="849fa-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="849fa-104">SYNOPSIS</span></span>
<span data-ttu-id="849fa-105">Convertit des objets en une série de chaînes de valeurs séparées par des virgules (CSV) et enregistre les chaînes dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-105">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

## <span data-ttu-id="849fa-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="849fa-106">SYNTAX</span></span>

### <span data-ttu-id="849fa-107">Délimiteur (par défaut)</span><span class="sxs-lookup"><span data-stu-id="849fa-107">Delimiter (Default)</span></span>

```
Export-Csv [[-Path] <string>] [[-Delimiter] <char>] -InputObject <psobject> [-LiteralPath <string>]
 [-Force] [-NoClobber] [-Encoding <string>] [-Append] [-NoTypeInformation] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

### <span data-ttu-id="849fa-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="849fa-108">UseCulture</span></span>

```
Export-Csv [[-Path] <string>] -InputObject <psobject> [-LiteralPath <string>] [-Force] [-NoClobber]
 [-Encoding <string>] [-Append] [-UseCulture] [-NoTypeInformation] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

## <span data-ttu-id="849fa-109">Description</span><span class="sxs-lookup"><span data-stu-id="849fa-109">DESCRIPTION</span></span>

<span data-ttu-id="849fa-110">L' `Export-CSV` applet de commande crée un fichier csv contenant les objets que vous envoyez.</span><span class="sxs-lookup"><span data-stu-id="849fa-110">The `Export-CSV` cmdlet creates a CSV file of the objects that you submit.</span></span> <span data-ttu-id="849fa-111">Chaque objet est une ligne qui contient une liste séparée par des virgules des valeurs de propriété de l’objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-111">Each object is a row that includes a comma-separated list of the object's property values.</span></span> <span data-ttu-id="849fa-112">Vous pouvez utiliser l' `Export-CSV` applet de commande pour créer des feuilles de calcul et partager des données avec des programmes qui acceptent les fichiers CSV comme entrée.</span><span class="sxs-lookup"><span data-stu-id="849fa-112">You can use the `Export-CSV` cmdlet to create spreadsheets and share data with programs that accept CSV files as input.</span></span>

<span data-ttu-id="849fa-113">Ne mettez pas en forme les objets avant de les envoyer à l’applet de commande `Export-CSV` .</span><span class="sxs-lookup"><span data-stu-id="849fa-113">Do not format objects before sending them to the `Export-CSV` cmdlet.</span></span> <span data-ttu-id="849fa-114">Si `Export-CSV` reçoit des objets mis en forme, le fichier CSV contient les propriétés de format au lieu des propriétés de l’objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-114">If `Export-CSV` receives formatted objects the CSV file contains the format properties rather than the object properties.</span></span> <span data-ttu-id="849fa-115">Pour exporter uniquement les propriétés sélectionnées d’un objet, utilisez l’applet de commande `Select-Object` .</span><span class="sxs-lookup"><span data-stu-id="849fa-115">To export only selected properties of an object, use the `Select-Object` cmdlet.</span></span>

## <span data-ttu-id="849fa-116">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="849fa-116">EXAMPLES</span></span>

### <span data-ttu-id="849fa-117">Exemple 1 : exporter des propriétés de processus vers un fichier CSV</span><span class="sxs-lookup"><span data-stu-id="849fa-117">Example 1: Export process properties to a CSV file</span></span>

<span data-ttu-id="849fa-118">Cet exemple sélectionne les objets de **processus** avec des propriétés spécifiques, exporte les objets dans un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-118">This example selects **Process** objects with specific properties, exports the objects to a CSV file.</span></span>

```powershell
Get-Process -Name WmiPrvSE | Select-Object -Property BasePriority,Id,SessionId,WorkingSet |
  Export-Csv -Path .\WmiData.csv -NoTypeInformation
Import-Csv -Path .\WmiData.csv
```

```Output
BasePriority Id    SessionId WorkingSet
------------ --    --------- ----------
8            976   0         20267008
8            2292  0         36786176
8            3816  0         30351360
8            8604  0         15011840
8            10008 0         8830976
8            11764 0         14237696
8            54632 0         9502720
```

<span data-ttu-id="849fa-119">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-119">The `Get-Process` cmdlet gets the **Process** objects.</span></span> <span data-ttu-id="849fa-120">Le paramètre **Name** filtre la sortie pour inclure uniquement les objets processus WmiPrvSE.</span><span class="sxs-lookup"><span data-stu-id="849fa-120">The **Name** parameter filters the output to include only the WmiPrvSE process objects.</span></span> <span data-ttu-id="849fa-121">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Select-Object` .</span><span class="sxs-lookup"><span data-stu-id="849fa-121">The process objects are sent down the pipeline to the `Select-Object` cmdlet.</span></span> <span data-ttu-id="849fa-122">`Select-Object` utilise le paramètre **Property** pour sélectionner un sous-ensemble de propriétés de l’objet Process.</span><span class="sxs-lookup"><span data-stu-id="849fa-122">`Select-Object` uses the **Property** parameter to select a subset of process object properties.</span></span> <span data-ttu-id="849fa-123">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-123">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-124">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-124">`Export-Csv` converts the process objects to a series of CSV strings.</span></span> <span data-ttu-id="849fa-125">Le paramètre **path** spécifie que le fichier WmiData.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-125">The **Path** parameter specifies that the WmiData.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-126">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-126">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-127">L' `Import-Csv` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-127">The `Import-Csv` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-128">Exemple 2 : exporter des processus vers un fichier délimité par des virgules</span><span class="sxs-lookup"><span data-stu-id="849fa-128">Example 2: Export processes to a comma-delimited file</span></span>

<span data-ttu-id="849fa-129">Cet exemple obtient les objets de **processus** et exporte les objets dans un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-129">This example gets **Process** objects and exports the objects to a CSV file.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -NoTypeInformation
Get-Content -Path .\Processes.csv
```

```Output
"Name","SI","Handles","VM","WS","PM","NPM","Path","Parent","Company","CPU","FileVersion", ...
"ApplicationFrameHost","4","511","2203597099008","35364864","21979136","30048", ...
```

<span data-ttu-id="849fa-130">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-130">The `Get-Process` cmdlet gets **Process** objects.</span></span> <span data-ttu-id="849fa-131">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-131">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-132">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-132">`Export-Csv` converts the process objects to a series of CSV strings.</span></span>
<span data-ttu-id="849fa-133">Le paramètre **path** spécifie que le fichier Processes.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-133">The **Path** parameter specifies that the Processes.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-134">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-134">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-135">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-135">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-136">Exemple 3 : exporter des processus vers un fichier délimité par des points-virgules</span><span class="sxs-lookup"><span data-stu-id="849fa-136">Example 3: Export processes to a semicolon delimited file</span></span>

<span data-ttu-id="849fa-137">Cet exemple obtient les objets de **processus** et exporte les objets dans un fichier avec un délimiteur de point-virgule.</span><span class="sxs-lookup"><span data-stu-id="849fa-137">This example gets **Process** objects and exports the objects to a file with a semicolon delimiter.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter ';' -NoTypeInformation
Get-Content -Path .\Processes.csv
```

```Output
"Name";"SI";"Handles";"VM";"WS";"PM";"NPM";"Path";"Parent";"Company";"CPU";"FileVersion"; ...
"ApplicationFrameHost";"4";"509";"2203595321344";"34807808";"21770240";"29504"; ...
```

<span data-ttu-id="849fa-138">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-138">The `Get-Process` cmdlet gets **Process** objects.</span></span> <span data-ttu-id="849fa-139">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-139">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-140">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-140">`Export-Csv` converts the process objects to a series of CSV strings.</span></span>
<span data-ttu-id="849fa-141">Le paramètre **path** spécifie que le fichier Processes.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-141">The **Path** parameter specifies that the Processes.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-142">Le paramètre **Delimiter** spécifie un point-virgule pour séparer les valeurs de chaîne.</span><span class="sxs-lookup"><span data-stu-id="849fa-142">The **Delimiter** parameter specifies a semicolon to separate the string values.</span></span> <span data-ttu-id="849fa-143">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-143">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-144">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-144">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-145">Exemple 4 : exporter des processus à l’aide du séparateur de liste de la culture actuelle</span><span class="sxs-lookup"><span data-stu-id="849fa-145">Example 4: Export processes using the current culture's list separator</span></span>

<span data-ttu-id="849fa-146">Cet exemple obtient les objets de **processus** et exporte les objets dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-146">This example gets **Process** objects and exports the objects to a file.</span></span> <span data-ttu-id="849fa-147">Le délimiteur est le séparateur de liste de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="849fa-147">The delimiter is the current culture's list separator.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture -NoTypeInformation
Get-Content -Path .\Processes.csv
```

```Output
"Name","SI","Handles","VM","WS","PM","NPM","Path","Parent","Company","CPU","FileVersion", ...
"ApplicationFrameHost","4","511","2203597099008","35364864","21979136","30048", ...
```

<span data-ttu-id="849fa-148">L' `Get-Culture` applet de commande utilise les propriétés imbriquées **TextInfo** et **ListSeparator** et affiche le séparateur de liste par défaut de la culture actuelle.</span><span class="sxs-lookup"><span data-stu-id="849fa-148">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** and displays the current culture's default list separator.</span></span> <span data-ttu-id="849fa-149">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-149">The `Get-Process` cmdlet gets **Process** objects.</span></span>
<span data-ttu-id="849fa-150">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-150">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-151">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-151">`Export-Csv` converts the process objects to a series of CSV strings.</span></span> <span data-ttu-id="849fa-152">Le paramètre **path** spécifie que le fichier Processes.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-152">The **Path** parameter specifies that the Processes.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-153">Le paramètre **UseCulture** utilise le séparateur de liste par défaut de la culture actuelle comme délimiteur.</span><span class="sxs-lookup"><span data-stu-id="849fa-153">The **UseCulture** parameter uses the current culture's default list separator as the delimiter.</span></span> <span data-ttu-id="849fa-154">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-154">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-155">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-155">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-156">Exemple 5 : exporter des processus avec des informations de type</span><span class="sxs-lookup"><span data-stu-id="849fa-156">Example 5: Export processes with type information</span></span>

<span data-ttu-id="849fa-157">Cet exemple explique comment inclure les informations d’en-tête **#TYPE** dans un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-157">This example explains how to include the **#TYPE** header information in a CSV file.</span></span> <span data-ttu-id="849fa-158">L’en-tête **#TYPE** est la valeur par défaut dans les versions antérieures à PowerShell 6,0.</span><span class="sxs-lookup"><span data-stu-id="849fa-158">The **#TYPE** header is the default in versions prior to PowerShell 6.0.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
Get-Content -Path .\Processes.csv
```

```Output
#TYPE System.Diagnostics.Process
"Name","SI","Handles","VM","WS","PM","NPM","Path","Company","CPU","FileVersion", ...
"ApplicationFrameHost","4","507","2203595001856","35139584","20934656","29504", ...
```

<span data-ttu-id="849fa-159">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-159">The `Get-Process` cmdlet gets **Process** objects.</span></span> <span data-ttu-id="849fa-160">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-160">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-161">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-161">`Export-Csv` converts the process objects to a series of CSV strings.</span></span>
<span data-ttu-id="849fa-162">Le paramètre **path** spécifie que le fichier Processes.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-162">The **Path** parameter specifies that the Processes.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-163">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-163">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-164">Exemple 6 : exporter et ajouter des objets dans un fichier CSV</span><span class="sxs-lookup"><span data-stu-id="849fa-164">Example 6: Export and append objects to a CSV file</span></span>

<span data-ttu-id="849fa-165">Cet exemple décrit comment exporter des objets dans un fichier CSV et utiliser le paramètre **Append** pour ajouter des objets à un fichier existant.</span><span class="sxs-lookup"><span data-stu-id="849fa-165">This example describes how to export objects to a CSV file and use the **Append** parameter to add objects to an existing file.</span></span>

```powershell
$AppService = (Get-Service -DisplayName *Application* | Select-Object -Property DisplayName, Status)
$AppService | Export-Csv -Path .\Services.Csv -NoTypeInformation
Get-Content -Path .\Services.Csv
$WinService = (Get-Service -DisplayName *Windows* | Select-Object -Property DisplayName, Status)
$WinService | Export-Csv -Path ./Services.csv -NoTypeInformation -Append
Get-Content -Path .\Services.Csv
```

```Output
"DisplayName","Status"
"Application Layer Gateway Service","Stopped"
"Application Identity","Running"
"Windows Audio Endpoint Builder","Running"
"Windows Audio","Running"
"Windows Event Log","Running"
```

<span data-ttu-id="849fa-166">L' `Get-Service` applet de commande obtient les objets de service.</span><span class="sxs-lookup"><span data-stu-id="849fa-166">The `Get-Service` cmdlet gets service objects.</span></span> <span data-ttu-id="849fa-167">Le paramètre **DisplayName** retourne les services qui contiennent l’application Word.</span><span class="sxs-lookup"><span data-stu-id="849fa-167">The **DisplayName** parameter returns services that contain the word Application.</span></span> <span data-ttu-id="849fa-168">Les objets de service sont envoyés dans le pipeline à l’applet de commande `Select-Object` .</span><span class="sxs-lookup"><span data-stu-id="849fa-168">The service objects are sent down the pipeline to the `Select-Object` cmdlet.</span></span> <span data-ttu-id="849fa-169">`Select-Object` utilise le paramètre **Property** pour spécifier les propriétés **DisplayName** et **Status** .</span><span class="sxs-lookup"><span data-stu-id="849fa-169">`Select-Object` uses the **Property** parameter to specify the **DisplayName** and **Status** properties.</span></span> <span data-ttu-id="849fa-170">La `$AppService` variable stocke les objets.</span><span class="sxs-lookup"><span data-stu-id="849fa-170">The `$AppService` variable stores the objects.</span></span>

<span data-ttu-id="849fa-171">Les `$AppService` objets sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-171">The `$AppService` objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-172">`Export-Csv` convertit les objets de service en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-172">`Export-Csv` converts the service objects to a series of CSV strings.</span></span> <span data-ttu-id="849fa-173">Le paramètre **path** spécifie que le fichier Services.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-173">The **Path** parameter specifies that the Services.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-174">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-174">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-175">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-175">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

<span data-ttu-id="849fa-176">Les `Get-Service` applets de commande et `Select-Object` sont répétées pour les services qui contiennent le mot Windows.</span><span class="sxs-lookup"><span data-stu-id="849fa-176">The `Get-Service` and `Select-Object` cmdlets are repeated for services that contain the word Windows.</span></span> <span data-ttu-id="849fa-177">La `$WinService` variable stocke les objets de service.</span><span class="sxs-lookup"><span data-stu-id="849fa-177">The `$WinService` variable stores the service objects.</span></span> <span data-ttu-id="849fa-178">L' `Export-Csv` applet de commande utilise le paramètre **Append** pour spécifier que les `$WinService` objets sont ajoutés au fichier de Services.csv existant.</span><span class="sxs-lookup"><span data-stu-id="849fa-178">The `Export-Csv` cmdlet uses the **Append** parameter to specify that the `$WinService` objects are added to the existing Services.csv file.</span></span> <span data-ttu-id="849fa-179">L' `Get-Content` applet de commande est répétée pour afficher le fichier mis à jour qui comprend les données ajoutées.</span><span class="sxs-lookup"><span data-stu-id="849fa-179">The `Get-Content` cmdlet is repeated to display the updated file that includes the appended data.</span></span>

### <span data-ttu-id="849fa-180">Exemple 7 : l’applet de commande format au sein d’un pipeline crée des résultats inattendus</span><span class="sxs-lookup"><span data-stu-id="849fa-180">Example 7: Format cmdlet within a pipeline creates unexpected results</span></span>

<span data-ttu-id="849fa-181">Cet exemple montre pourquoi il est important de ne pas utiliser une applet de commande format dans un pipeline.</span><span class="sxs-lookup"><span data-stu-id="849fa-181">This example shows why it is important not to use a format cmdlet within a pipeline.</span></span> <span data-ttu-id="849fa-182">Lors de la réception d’une sortie inattendue, corrigez la syntaxe du pipeline.</span><span class="sxs-lookup"><span data-stu-id="849fa-182">When unexpected output is received, troubleshoot the pipeline syntax.</span></span>

```powershell
Get-Date | Select-Object -Property DateTime, Day, DayOfWeek, DayOfYear |
 Export-Csv -Path .\DateTime.csv -NoTypeInformation
Get-Content -Path .\DateTime.csv
```

```Output
"DateTime","Day","DayOfWeek","DayOfYear"
"Wednesday, January 2, 2019 14:59:34","2","Wednesday","2"
```

```powershell
Get-Date | Format-Table -Property DateTime, Day, DayOfWeek, DayOfYear |
 Export-Csv -Path .\FTDateTime.csv -NoTypeInformation
Get-Content -Path .\FTDateTime.csv
```

```Output
"ClassId2e4f51ef21dd47e99d3c952918aff9cd","pageHeaderEntry","pageFooterEntry","autosizeInfo", ...
"033ecb2bc07a4d43b5ef94ed5a35d280",,,,"Microsoft.PowerShell.Commands.Internal.Format. ...
"9e210fe47d09416682b841769c78b8a3",,,,,
"27c87ef9bbda4f709f6b4002fa4af63c",,,,,
"4ec4f0187cb04f4cb6973460dfe252df",,,,,
"cf522b78d86c486691226b40aa69e95c",,,,,
```

<span data-ttu-id="849fa-183">L' `Get-Date` applet de commande obtient l’objet **DateTime** .</span><span class="sxs-lookup"><span data-stu-id="849fa-183">The `Get-Date` cmdlet gets the **DateTime** object.</span></span> <span data-ttu-id="849fa-184">L’objet est envoyé dans le pipeline à l’applet de commande `Select-Object` .</span><span class="sxs-lookup"><span data-stu-id="849fa-184">The object is sent down the pipeline to the `Select-Object` cmdlet.</span></span> <span data-ttu-id="849fa-185">`Select-Object` utilise le paramètre **Property** pour sélectionner un sous-ensemble de propriétés d’objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-185">`Select-Object` uses the **Property** parameter to select a subset of object properties.</span></span> <span data-ttu-id="849fa-186">L’objet est envoyé dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-186">The object is sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-187">`Export-Csv` Convertit l’objet au format CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-187">`Export-Csv` converts the object to a CSV format.</span></span> <span data-ttu-id="849fa-188">Le paramètre **path** spécifie que le fichier DateTime.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-188">The **Path** parameter specifies that the DateTime.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-189">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-189">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-190">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier CSV situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-190">The `Get-Content` cmdlet uses the **Path** parameter to display the CSV file located in the current directory.</span></span>

<span data-ttu-id="849fa-191">Lorsque l' `Format-Table` applet de commande est utilisée dans le pipeline pour sélectionner des propriétés, des résultats inattendus sont reçus.</span><span class="sxs-lookup"><span data-stu-id="849fa-191">When the `Format-Table` cmdlet is used within the pipeline to select properties unexpected results are received.</span></span> <span data-ttu-id="849fa-192">`Format-Table` envoie des objets de format de table vers l’applet de commande au lieu de l' `Export-Csv` objet **DateTime** .</span><span class="sxs-lookup"><span data-stu-id="849fa-192">`Format-Table` sends table format objects down the pipeline to the `Export-Csv` cmdlet rather than the **DateTime** object.</span></span> <span data-ttu-id="849fa-193">`Export-Csv` convertit les objets de format de table en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-193">`Export-Csv` converts the table format objects to a series of CSV strings.</span></span> <span data-ttu-id="849fa-194">L' `Get-Content` applet de commande affiche le fichier CSV qui contient les objets de format de table.</span><span class="sxs-lookup"><span data-stu-id="849fa-194">The `Get-Content` cmdlet displays the CSV file which contains the table format objects.</span></span>

### <span data-ttu-id="849fa-195">Exemple 8 : utilisation du paramètre force pour remplacer les fichiers en lecture seule</span><span class="sxs-lookup"><span data-stu-id="849fa-195">Example 8: Using the Force parameter to overwrite read-only files</span></span>

<span data-ttu-id="849fa-196">Cet exemple crée un fichier vide en lecture seule et utilise le paramètre **force** pour mettre à jour le fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-196">This example creates an empty, read-only file and uses the **Force** parameter to update the file.</span></span>

```powershell
New-Item -Path .\ReadOnly.csv -ItemType File
Set-ItemProperty -Path .\ReadOnly.csv -Name IsReadOnly -Value $true
Get-Process | Export-Csv -Path .\ReadOnly.csv -NoTypeInformation
```

```Output
Export-Csv : Access to the path 'C:\ReadOnly.csv' is denied.
At line:1 char:15
+ Get-Process | Export-Csv -Path .\ReadOnly.csv -NoTypeInformation
+               ~~~~~~~~~~~~~~~~~~~~~~~~
+ CategoryInfo          : OpenError: (:) [Export-Csv], UnauthorizedAccessException
+ FullyQualifiedErrorId : FileOpenFailure,Microsoft.PowerShell.Commands.ExportCsvCommand
```

```powershell
Get-Process | Export-Csv -Path .\ReadOnly.csv -NoTypeInformation -Force
Get-Content -Path .\ReadOnly.csv
```

```Output
"Name";"SI";"Handles";"VM";"WS";"PM";"NPM";"Path";"Parent";"Company";"CPU";"FileVersion"; ...
"ApplicationFrameHost";"4";"509";"2203595321344";"34807808";"21770240";"29504"; ...
```

<span data-ttu-id="849fa-197">L' `New-Item` applet de commande utilise les paramètres **path** et **ItemType** pour créer le fichier ReadOnly.csv dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-197">The `New-Item` cmdlet uses the **Path** and **ItemType** parameters to create the ReadOnly.csv file in the current directory.</span></span> <span data-ttu-id="849fa-198">L' `Set-ItemProperty` applet de commande utilise les paramètres **Name** et **value** pour affecter la valeur true à la propriété **IsReadOnly** du fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-198">The `Set-ItemProperty` cmdlet uses the **Name** and **Value** parameters to change the file's **IsReadOnly** property to true.</span></span> <span data-ttu-id="849fa-199">L' `Get-Process` applet de commande obtient les objets de **processus** .</span><span class="sxs-lookup"><span data-stu-id="849fa-199">The `Get-Process` cmdlet gets **Process** objects.</span></span> <span data-ttu-id="849fa-200">Les objets processus sont envoyés dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-200">The process objects are sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-201">`Export-Csv` convertit les objets processus en une série de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-201">`Export-Csv` converts the process objects to a series of CSV strings.</span></span> <span data-ttu-id="849fa-202">Le paramètre **path** spécifie que le fichier ReadOnly.csv est enregistré dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-202">The **Path** parameter specifies that the ReadOnly.csv file is saved in the current directory.</span></span> <span data-ttu-id="849fa-203">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-203">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span> <span data-ttu-id="849fa-204">La sortie indique que le fichier n’est pas écrit parce que l’accès est refusé.</span><span class="sxs-lookup"><span data-stu-id="849fa-204">The output shows that the file is not written because access is denied.</span></span>

<span data-ttu-id="849fa-205">Le paramètre **force** est ajouté à l' `Export-Csv` applet de commande pour forcer l’exportation à écrire dans le fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-205">The **Force** parameter is added to the `Export-Csv` cmdlet to force the export to write to the file.</span></span> <span data-ttu-id="849fa-206">L' `Get-Content` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-206">The `Get-Content` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

### <span data-ttu-id="849fa-207">Exemple 9 : utilisation du paramètre force avec Append</span><span class="sxs-lookup"><span data-stu-id="849fa-207">Example 9: Using the Force parameter with Append</span></span>

<span data-ttu-id="849fa-208">Cet exemple montre comment utiliser les paramètres **force** et **Append** .</span><span class="sxs-lookup"><span data-stu-id="849fa-208">This example shows how to use the **Force** and **Append** parameters.</span></span> <span data-ttu-id="849fa-209">Lorsque ces paramètres sont combinés, les propriétés d’objets non appariées peuvent être écrites dans un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-209">When these parameters are combined, mismatched object properties can be written to a CSV file.</span></span>

```powershell
$Content = [PSCustomObject]@{Name = 'PowerShell Core'; Version = '6.0'}
$Content | Export-Csv -Path .\ParmFile.csv -NoTypeInformation
$AdditionalContent = [PSCustomObject]@{Name = 'Windows PowerShell'; Edition = 'Desktop'}
$AdditionalContent | Export-Csv -Path .\ParmFile.csv -NoTypeInformation -Append
```

```Output
Export-Csv : Cannot append CSV content to the following file: ParmFile.csv.
The appended object does not have a property that corresponds to the following column:
Version. To continue with mismatched properties, add the -Force parameter, and then retry
 the command.
At line:1 char:22
+ $AdditionalContent | Export-Csv -Path .\ParmFile.csv -NoTypeInformation -Append
+                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ CategoryInfo          : InvalidData: (Version:String) [Export-Csv], InvalidOperationException
+ FullyQualifiedErrorId : CannotAppendCsvWithMismatchedPropertyNames,Microsoft.PowerShell. ...
```

```powershell
$AdditionalContent | Export-Csv -Path .\ParmFile.csv -NoTypeInformation -Append -Force
Import-Csv -Path .\ParmFile.csv
```

```Output
Name               Version
----               -------
PowerShell Core    6.0
Windows PowerShell
```

<span data-ttu-id="849fa-210">Une expression crée le **PSCustomObject** avec les propriétés **Name** et **version** .</span><span class="sxs-lookup"><span data-stu-id="849fa-210">An expression creates the **PSCustomObject** with **Name** and **Version** properties.</span></span> <span data-ttu-id="849fa-211">Les valeurs sont stockées dans la `$Content` variable.</span><span class="sxs-lookup"><span data-stu-id="849fa-211">The values are stored in the `$Content` variable.</span></span> <span data-ttu-id="849fa-212">La `$Content` variable est envoyée dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-212">The `$Content` variable is sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-213">`Export-Csv` utilise le paramètre **path** et enregistre le fichier ParmFile.csv dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-213">`Export-Csv` uses the **Path** parameter and saves the ParmFile.csv file in the current directory.</span></span> <span data-ttu-id="849fa-214">Le paramètre **NoTypeInformation** supprime l’en-tête d’informations **#TYPE** de la sortie CSV et n’est pas requis dans PowerShell 6.</span><span class="sxs-lookup"><span data-stu-id="849fa-214">The **NoTypeInformation** parameter removes the **#TYPE** information header from the CSV output and is not required in PowerShell 6.</span></span>

<span data-ttu-id="849fa-215">Une autre expression crée un **PSCustomObject** avec le **nom** et les propriétés de l' **édition** .</span><span class="sxs-lookup"><span data-stu-id="849fa-215">Another expression creates a **PSCustomObject** with the **Name** and **Edition** properties.</span></span> <span data-ttu-id="849fa-216">Les valeurs sont stockées dans la `$AdditionalContent` variable.</span><span class="sxs-lookup"><span data-stu-id="849fa-216">The values are stored in the `$AdditionalContent` variable.</span></span> <span data-ttu-id="849fa-217">La `$AdditionalContent` variable est envoyée dans le pipeline à l’applet de commande `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="849fa-217">The `$AdditionalContent` variable is sent down the pipeline to the `Export-Csv` cmdlet.</span></span> <span data-ttu-id="849fa-218">Le paramètre **Append** est utilisé pour ajouter les données au fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-218">The **Append** parameter is used to add the data to the file.</span></span> <span data-ttu-id="849fa-219">L’ajout échoue en raison d’une incompatibilité de nom de propriété entre la **version** et l' **édition** .</span><span class="sxs-lookup"><span data-stu-id="849fa-219">The append fails because there is a property name mismatch between **Version** and **Edition** .</span></span>

<span data-ttu-id="849fa-220">Le `Export-Csv` paramètre **force** de l’applet de commande est utilisé pour forcer l’exportation à écrire dans le fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-220">The `Export-Csv` cmdlet **Force** parameter is used to force the export to write to the file.</span></span> <span data-ttu-id="849fa-221">La propriété **Edition** est ignorée.</span><span class="sxs-lookup"><span data-stu-id="849fa-221">The **Edition** property is discarded.</span></span> <span data-ttu-id="849fa-222">L' `Import-Csv` applet de commande utilise le paramètre **path** pour afficher le fichier situé dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="849fa-222">The `Import-Csv` cmdlet uses the **Path** parameter to display the file located in the current directory.</span></span>

## <span data-ttu-id="849fa-223">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="849fa-223">PARAMETERS</span></span>

### <span data-ttu-id="849fa-224">-Append</span><span class="sxs-lookup"><span data-stu-id="849fa-224">-Append</span></span>

<span data-ttu-id="849fa-225">Utilisez ce paramètre pour `Export-CSV` Ajouter la sortie CSV à la fin du fichier spécifié.</span><span class="sxs-lookup"><span data-stu-id="849fa-225">Use this parameter so that `Export-CSV` adds CSV output to the end of the specified file.</span></span> <span data-ttu-id="849fa-226">Sans ce paramètre, `Export-CSV` remplace le contenu du fichier sans avertissement.</span><span class="sxs-lookup"><span data-stu-id="849fa-226">Without this parameter, `Export-CSV` replaces the file contents without warning.</span></span>

<span data-ttu-id="849fa-227">Ce paramètre a été introduit dans Windows PowerShell 3.0.</span><span class="sxs-lookup"><span data-stu-id="849fa-227">This parameter was introduced in Windows PowerShell 3.0.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-228">-Délimiteur</span><span class="sxs-lookup"><span data-stu-id="849fa-228">-Delimiter</span></span>

<span data-ttu-id="849fa-229">Spécifie un délimiteur pour séparer les valeurs de propriété.</span><span class="sxs-lookup"><span data-stu-id="849fa-229">Specifies a delimiter to separate the property values.</span></span> <span data-ttu-id="849fa-230">La valeur par défaut est une virgule ( `,` ).</span><span class="sxs-lookup"><span data-stu-id="849fa-230">The default is a comma (`,`).</span></span> <span data-ttu-id="849fa-231">Entrez un caractère, tel qu’un signe deux-points ( `:` ).</span><span class="sxs-lookup"><span data-stu-id="849fa-231">Enter a character, such as a colon (`:`).</span></span> <span data-ttu-id="849fa-232">Pour spécifier un point-virgule ( `;` ), mettez-le entre guillemets.</span><span class="sxs-lookup"><span data-stu-id="849fa-232">To specify a semicolon (`;`), enclose it in quotation marks.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-233">-Encoding</span><span class="sxs-lookup"><span data-stu-id="849fa-233">-Encoding</span></span>

<span data-ttu-id="849fa-234">Spécifie le type de codage du fichier cible.</span><span class="sxs-lookup"><span data-stu-id="849fa-234">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="849fa-235">La valeur par défaut est `ASCII`.</span><span class="sxs-lookup"><span data-stu-id="849fa-235">The default value is `ASCII`.</span></span>

<span data-ttu-id="849fa-236">Les valeurs acceptables pour ce paramètre sont les suivantes :</span><span class="sxs-lookup"><span data-stu-id="849fa-236">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="849fa-237">`ASCII` Utilise le jeu de caractères ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="849fa-237">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="849fa-238">`BigEndianUnicode` Utilise UTF-16 avec l’ordre des octets de poids fort (Big-endian).</span><span class="sxs-lookup"><span data-stu-id="849fa-238">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="849fa-239">`Default` Utilise l’encodage qui correspond à la page de codes active du système (généralement ANSI).</span><span class="sxs-lookup"><span data-stu-id="849fa-239">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="849fa-240">`OEM` Utilise l’encodage qui correspond à la page de codes OEM actuelle du système.</span><span class="sxs-lookup"><span data-stu-id="849fa-240">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="849fa-241">`Unicode` Utilise UTF-16 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="849fa-241">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="849fa-242">`UTF7` Utilise UTF-7.</span><span class="sxs-lookup"><span data-stu-id="849fa-242">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="849fa-243">`UTF8` Utilise UTF-8.</span><span class="sxs-lookup"><span data-stu-id="849fa-243">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="849fa-244">`UTF32` Utilise UTF-32 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="849fa-244">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: ASCII
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-245">-Force</span><span class="sxs-lookup"><span data-stu-id="849fa-245">-Force</span></span>

<span data-ttu-id="849fa-246">Ce paramètre permet `Export-Csv` de remplacer les fichiers avec l’attribut de **lecture seule** .</span><span class="sxs-lookup"><span data-stu-id="849fa-246">This parameter allows `Export-Csv` to overwrite files with the **Read Only** attribute.</span></span>

<span data-ttu-id="849fa-247">Lorsque les paramètres **force** et **Append** sont combinés, les objets qui contiennent des propriétés incompatibles peuvent être écrits dans un fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-247">When **Force** and **Append** parameters are combined, objects that contain mismatched properties can be written to a CSV file.</span></span> <span data-ttu-id="849fa-248">Seules les propriétés correspondantes sont écrites dans le fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-248">Only the properties that match are written to the file.</span></span> <span data-ttu-id="849fa-249">Les propriétés non appariées sont ignorées.</span><span class="sxs-lookup"><span data-stu-id="849fa-249">The mismatched properties are discarded.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-250">-InputObject</span><span class="sxs-lookup"><span data-stu-id="849fa-250">-InputObject</span></span>

<span data-ttu-id="849fa-251">Spécifie les objets à exporter en tant que chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-251">Specifies the objects to export as CSV strings.</span></span> <span data-ttu-id="849fa-252">Entrez une variable contenant les objets, ou tapez une commande ou une expression qui les obtient.</span><span class="sxs-lookup"><span data-stu-id="849fa-252">Enter a variable that contains the objects or type a command or expression that gets the objects.</span></span> <span data-ttu-id="849fa-253">Vous pouvez également diriger les objets vers `Export-CSV` .</span><span class="sxs-lookup"><span data-stu-id="849fa-253">You can also pipe objects to `Export-CSV`.</span></span>

```yaml
Type: System.Management.Automation.PSObject
Parameter Sets: (All)
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-254">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="849fa-254">-LiteralPath</span></span>

<span data-ttu-id="849fa-255">Spécifie le chemin d'accès au fichier de sortie CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-255">Specifies the path to the CSV output file.</span></span> <span data-ttu-id="849fa-256">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle qu'elle est tapée.</span><span class="sxs-lookup"><span data-stu-id="849fa-256">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="849fa-257">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="849fa-257">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="849fa-258">Si le chemin d’accès comprend des caractères d’échappement, utilisez des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="849fa-258">If the path includes escape characters, use single quotation marks.</span></span> <span data-ttu-id="849fa-259">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="849fa-259">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-260">-NoClobber</span><span class="sxs-lookup"><span data-stu-id="849fa-260">-NoClobber</span></span>

<span data-ttu-id="849fa-261">Utilisez ce paramètre pour `Export-CSV` ne pas remplacer un fichier existant.</span><span class="sxs-lookup"><span data-stu-id="849fa-261">Use this parameter so that `Export-CSV` does not overwrite an existing file.</span></span> <span data-ttu-id="849fa-262">Par défaut, si le fichier existe dans le chemin d’accès spécifié, `Export-CSV` remplace le fichier sans avertissement.</span><span class="sxs-lookup"><span data-stu-id="849fa-262">By default, if the file exists in the specified path, `Export-CSV` overwrites the file without warning.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: NoOverwrite

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-263">-NoTypeInformation</span><span class="sxs-lookup"><span data-stu-id="849fa-263">-NoTypeInformation</span></span>

<span data-ttu-id="849fa-264">Supprime l’en-tête d’informations **#TYPE** de la sortie.</span><span class="sxs-lookup"><span data-stu-id="849fa-264">Removes the **#TYPE** information header from the output.</span></span> <span data-ttu-id="849fa-265">Ce paramètre est devenu la valeur par défaut dans PowerShell 6,0 et est inclus à des fins de compatibilité descendante.</span><span class="sxs-lookup"><span data-stu-id="849fa-265">This parameter became the default in PowerShell 6.0 and is included for backwards compatibility.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: NTI

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-266">-Path</span><span class="sxs-lookup"><span data-stu-id="849fa-266">-Path</span></span>

<span data-ttu-id="849fa-267">Paramètre obligatoire qui spécifie l’emplacement d’enregistrement du fichier de sortie CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-267">A required parameter that specifies the location to save the CSV output file.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-268">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="849fa-268">-UseCulture</span></span>

<span data-ttu-id="849fa-269">Utilise le séparateur de liste pour la culture actuelle comme délimiteur d’élément.</span><span class="sxs-lookup"><span data-stu-id="849fa-269">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="849fa-270">Pour rechercher le séparateur de liste pour une culture, utilisez la commande suivante : `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="849fa-270">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-271">-Confirm</span><span class="sxs-lookup"><span data-stu-id="849fa-271">-Confirm</span></span>

<span data-ttu-id="849fa-272">Vous demande une confirmation avant d’exécuter l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="849fa-272">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-273">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="849fa-273">-WhatIf</span></span>

<span data-ttu-id="849fa-274">Empêche le traitement de l’applet de commande ou l’apport de modifications.</span><span class="sxs-lookup"><span data-stu-id="849fa-274">Prevents the cmdlet from being processed or making changes.</span></span> <span data-ttu-id="849fa-275">La sortie indique ce qui se produirait si l’applet de commande était exécutée.</span><span class="sxs-lookup"><span data-stu-id="849fa-275">The output shows what would happen if the cmdlet were run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="849fa-276">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="849fa-276">CommonParameters</span></span>

<span data-ttu-id="849fa-277">Cette applet de commande prend en charge les paramètres courants : -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction et -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="849fa-277">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="849fa-278">Pour plus d’informations, consultez [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="849fa-278">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="849fa-279">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="849fa-279">INPUTS</span></span>

### <span data-ttu-id="849fa-280">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="849fa-280">System.Management.Automation.PSObject</span></span>

<span data-ttu-id="849fa-281">Vous pouvez diriger n’importe quel objet avec un adaptateur de système de type étendu (ETS) vers `Export-CSV` .</span><span class="sxs-lookup"><span data-stu-id="849fa-281">You can pipe any object with an Extended Type System (ETS) adapter to `Export-CSV`.</span></span>

## <span data-ttu-id="849fa-282">SORTIES</span><span class="sxs-lookup"><span data-stu-id="849fa-282">OUTPUTS</span></span>

### <span data-ttu-id="849fa-283">System.String</span><span class="sxs-lookup"><span data-stu-id="849fa-283">System.String</span></span>

<span data-ttu-id="849fa-284">La liste CSV est envoyée au fichier désigné dans le paramètre Path.</span><span class="sxs-lookup"><span data-stu-id="849fa-284">The CSV list is sent to the file designated in the Path parameter.</span></span>

## <span data-ttu-id="849fa-285">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="849fa-285">NOTES</span></span>

<span data-ttu-id="849fa-286">L' `Export-CSV` applet de commande convertit les objets que vous envoyez en une série de chaînes CSV et les enregistre dans le fichier texte spécifié.</span><span class="sxs-lookup"><span data-stu-id="849fa-286">The `Export-CSV` cmdlet converts the objects that you submit into a series of CSV strings and saves them in the specified text file.</span></span> <span data-ttu-id="849fa-287">Vous pouvez utiliser `Export-CSV` pour enregistrer des objets dans un fichier CSV, puis utiliser l' `Import-Csv` applet de commande pour créer des objets à partir du fichier CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-287">You can use `Export-CSV` to save objects in a CSV file and then use the `Import-Csv` cmdlet to create objects from the CSV file.</span></span>

<span data-ttu-id="849fa-288">Dans le fichier CSV, chaque objet est représenté par une liste séparée par des virgules des valeurs de propriété de l'objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-288">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="849fa-289">Les valeurs de propriété sont converties en chaînes à l’aide de la méthode **ToString ()** .</span><span class="sxs-lookup"><span data-stu-id="849fa-289">The property values are converted to strings using the **ToString()** method.</span></span> <span data-ttu-id="849fa-290">Les chaînes sont représentées par le nom de la valeur de propriété.</span><span class="sxs-lookup"><span data-stu-id="849fa-290">The strings are represented by the property value name.</span></span> <span data-ttu-id="849fa-291">'Export-CSV n’exporte pas les méthodes de l’objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-291">\`Export-CSV does not export the methods of the object.</span></span>

<span data-ttu-id="849fa-292">Les chaînes CSV sont générées comme suit :</span><span class="sxs-lookup"><span data-stu-id="849fa-292">The CSV strings are output as follows:</span></span>

- <span data-ttu-id="849fa-293">Par défaut, la première chaîne contient l’en-tête d’informations **#TYPE** , suivi du nom qualifié complet du type d’objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-293">By default the first string contains the **#TYPE** information header followed by the object type's fully qualified name.</span></span> <span data-ttu-id="849fa-294">Par exemple, **#TYPE System. Diagnostics. Process** .</span><span class="sxs-lookup"><span data-stu-id="849fa-294">For example, **#TYPE System.Diagnostics.Process** .</span></span>
- <span data-ttu-id="849fa-295">Si **NoTypeInformation** est utilisé, la première chaîne comprend les en-têtes de colonne.</span><span class="sxs-lookup"><span data-stu-id="849fa-295">If **NoTypeInformation** is used the first string includes the column headers.</span></span> <span data-ttu-id="849fa-296">Les en-têtes contiennent les noms de propriété du premier objet sous la forme d’une liste séparée par des virgules.</span><span class="sxs-lookup"><span data-stu-id="849fa-296">The headers contain the first object's property names as a comma-separated list.</span></span>
- <span data-ttu-id="849fa-297">Les chaînes restantes contiennent des listes séparées par des virgules des valeurs de propriété de chaque objet.</span><span class="sxs-lookup"><span data-stu-id="849fa-297">The remaining strings contain comma-separated lists of each object's property values.</span></span>

<span data-ttu-id="849fa-298">Lorsque vous envoyez plusieurs objets à `Export-CSV` , `Export-CSV` organise le fichier en fonction des propriétés du premier objet que vous envoyez.</span><span class="sxs-lookup"><span data-stu-id="849fa-298">When you submit multiple objects to `Export-CSV`, `Export-CSV` organizes the file based on the properties of the first object that you submit.</span></span> <span data-ttu-id="849fa-299">Si les objets restants n'ont pas l'une des propriétés spécifiées, la valeur de propriété de cet objet est null (représentation sous forme de deux virgules consécutives).</span><span class="sxs-lookup"><span data-stu-id="849fa-299">If the remaining objects do not have one of the specified properties, the property value of that object is null, as represented by two consecutive commas.</span></span> <span data-ttu-id="849fa-300">Si les objets restants ont des propriétés supplémentaires, ces valeurs de propriété ne sont pas incluses dans le fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-300">If the remaining objects have additional properties, those property values are not included in the file.</span></span>

<span data-ttu-id="849fa-301">Vous pouvez utiliser la `Import-Csv` cmdlet pour recréer des objets à partir des chaînes CSV dans les fichiers.</span><span class="sxs-lookup"><span data-stu-id="849fa-301">You can use the `Import-Csv` cmdlet to recreate objects from the CSV strings in the files.</span></span> <span data-ttu-id="849fa-302">Les objets résultants sont les versions CSV des objets d'origine qui se composent des représentations de chaînes des valeurs de propriété et d'aucune méthode.</span><span class="sxs-lookup"><span data-stu-id="849fa-302">The resulting objects are CSV versions of the original objects that consist of string representations of the property values and no methods.</span></span>

<span data-ttu-id="849fa-303">Les `ConvertTo-Csv` applets de commande et `ConvertFrom-Csv` convertissent des objets en chaînes CSV et à partir de chaînes CSV.</span><span class="sxs-lookup"><span data-stu-id="849fa-303">The `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets convert objects to CSV strings and from CSV strings.</span></span> <span data-ttu-id="849fa-304">`Export-CSV` est identique à `ConvertTo-CSV` , à ceci près qu’il enregistre les chaînes CSV dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="849fa-304">`Export-CSV` is the same as `ConvertTo-CSV`, except that it saves the CSV strings in a file.</span></span>

## <span data-ttu-id="849fa-305">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="849fa-305">RELATED LINKS</span></span>

[<span data-ttu-id="849fa-306">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="849fa-306">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="849fa-307">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="849fa-307">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="849fa-308">Format-Table</span><span class="sxs-lookup"><span data-stu-id="849fa-308">Format-Table</span></span>](Format-Table.md)

[<span data-ttu-id="849fa-309">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="849fa-309">Import-Csv</span></span>](Import-Csv.md)

[<span data-ttu-id="849fa-310">Select-Object</span><span class="sxs-lookup"><span data-stu-id="849fa-310">Select-Object</span></span>](Select-Object.md)
